--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,21 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-    flutter:
+  flutter:
     sdk: flutter
-    sqflite: ^2.3.0
-    path: ^1.8.3
-  
-    camera: ^0.10.5+9              # Câmera
-    permission_handler: ^11.3.1    # Gerenciamento de permissões
-    sensors_plus: ^4.0.2           # Sensores (acelerômetro)
-    vibration: ^1.8.4              # Feedback tátil
-    geolocator: ^10.1.0            # GPS
-    geocoding: ^2.1.1              # Endereços
-
+  sqflite_common_ffi: ^2.3.0
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  camera: ^0.10.5+9              # Câmera
+  permission_handler: ^11.3.1    # Gerenciamento de permissões
+  sensors_plus: ^4.0.2           # Sensores (acelerômetro)
+  vibration: ^1.8.4              # Feedback tátil
+  geolocator: ^10.1.0            # GPS
+  geocoding: ^2.1.1              # Endereços
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-    cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.8
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
