--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite_common_ffi: ^2.3.0
+  # sqflite_common_ffi: ^2.3.0
   sqflite: ^2.3.0
   path: ^1.8.3
   camera: ^0.10.5+9              # Câmera
